# deepresearch-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: api-documenter.md  code-reviewer.md  test-writer.md
.claude/skills/new-adr/: SKILL.md
.claude/skills/new-til/: SKILL.md
.claude/skills/run-agent/: SKILL.md
.github/workflows/: ci.yml
configs/: models.yaml
docs/: milestones.md
docs/adr/: ADR-001-langgraph-agent-loop.md  ADR-002-planning-strategy.md  ADR-003-memory-architecture.md  ADR-004-multi-agent-coordination.md  ADR-005-context-compression.md  template.md
docs/memo/: claude-code-architecture-memo.md
docs/planning/: project_background.md  tech_selection.md
docs/tools/: linear_issues.json  sync_to_linear.py
src/: hello_llm.py  tavily_example.py  tool_calling_example.py  tracing.py
src/models/: config.py
tests/: test_config.py  test_hello_llm.py  test_placeholder.py  test_tavily_example.py  test_tool_calling.py
