[project]
name = "deepresearch-agent"
version = "0.1.0"
description = "Autonomous research agent built with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langsmith>=0.7.23",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "mypy>=1.11,<1.20",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
